@startuml

'Diagramme de classes (PlantUML)'

'Configuration charte graphique'
hide empty methods
hide circle
skinparam class {
  BackgroundColor White
  ArrowColor Black
  BorderColor Black
}

'Classes, énumérations, etc.'

class MiniSocs {
  - nomDuSysteme: String
}
note left of MiniSocs: utilisateurs: Collection Utilisateur\nreseaux: Collection ReseauSocial

class Utilisateur {
  - pseudonyme: String
  - nom: String
  - prénom: String
  - courriel: String
  - etatCompte: ÉtatCompte
}
note bottom of Utilisateur: membres: Collection Membre

enum EtatCompte <<enum>> {
  ACTIF
  DESACTIVE
  BLOQUE
}
class Membre {
  - pseudoReseau: String
  - moderateur: boolean
}

note left of Membre: reseauSocial: ReseauSocial\nutilisateur: Utilisateur\nmessages: Collection Message\nconsommateur: MonConsommateur

enum EtatNotif <<enum>> {
  IMMEDIAT
  RIEN
  QUOTIDIEN
}

class MonConsommateur {
  - id: String
  - souscription: Subscription
  - etatNotif: EtatNotif 
  - date: LocalDate
  - moderateur: boolean 
  - compteurMessage: int
  - compteurMessageEnAttente: int
}

class Publication {
  - nomReseau: String
}
note bottom of Publication: message: Message


class ReseauSocial {
  - nom: String
  - etatReseau: EtatReseau
  - producteur: SubmissionPublisher<Publication>
}

note right of ReseauSocial: membres: Collection Membre\nmessages: Collection Message

enum EtatReseau <<enum>> {
  FERMÉ
  OUVERT
}
class Message {
  - idMessage: int
  - contenu : String
  - etatMessage: EtatMessage
}
enum EtatMessage <<enum>> {
  ACCEPTE
  REFUSE
  ATTENTE
  CACHE
}

'Associations, etc.'
MiniSocs *--> "*" Utilisateur
MiniSocs *--> "*" Membre
MiniSocs *--> "*" Message
MiniSocs *--> "*" ReseauSocial
MiniSocs *--> "*" MonConsommateur
MiniSocs *--> "*" Publication
Utilisateur "1" -- "*" Membre
Membre "1" --> "1" MonConsommateur
Publication "1" --> "1" Message : > contient un
ReseauSocial "1" -- "*" Membre : < fait partie
Message "*"<-- "1" Membre : < a posté
ReseauSocial *--> "*" Message : > contient
'Au besoin, aides pour le positionnement'

@enduml
